GROOVY-10049